// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApplicationStatusOverlay should honor buttonAttrs prop 1`] = `
<ApplicationStatusOverlay
  buttonAttrs={
    [
      {
        "key": 1,
        "text": "Action 1",
      },
      {
        "key": 2,
        "text": "Action 2",
      },
    ]
  }
/>
`;

exports[`ApplicationStatusOverlay should honor buttonAttrs prop 2`] = `
<ApplicationStatusOverlay
  buttonAttrs={
    [
      {
        "key": 3,
        "text": "Action 3",
      },
    ]
  }
/>
`;

exports[`ApplicationStatusOverlay should honor message prop 1`] = `
<ApplicationStatusOverlay
  buttonAttrs={[]}
  message="First message"
/>
`;

exports[`ApplicationStatusOverlay should honor message prop 2`] = `
<ApplicationStatusOverlay
  buttonAttrs={[]}
  message="Second message"
/>
`;

exports[`ApplicationStatusOverlay should honor variant prop 1`] = `
<ApplicationStatusOverlay
  buttonAttrs={[]}
  variant="no-data"
/>
`;

exports[`ApplicationStatusOverlay should honor variant prop 2`] = `
<ApplicationStatusOverlay
  buttonAttrs={[]}
  variant="no-matching-results"
/>
`;

exports[`ApplicationStatusOverlay should honor variant prop 3`] = `
<ApplicationStatusOverlay
  buttonAttrs={[]}
  variant="not-authorized"
/>
`;

exports[`ApplicationStatusOverlay should honor variant prop 4`] = `
<ApplicationStatusOverlay
  buttonAttrs={[]}
  variant="error"
/>
`;

exports[`ApplicationStatusOverlay should redisplay status view with new props 1`] = `
<ApplicationStatusOverlay
  buttonAttrs={[]}
  message="Error status view"
  variant="error"
/>
`;

exports[`ApplicationStatusOverlay should render status view with the specified data 1`] = `
<ApplicationStatusOverlay
  buttonAttrs={
    [
      {
        "key": 1,
        "text": "Action 1",
      },
      {
        "key": 2,
        "text": "Action 2",
      },
    ]
  }
  message="Status View with all props specified"
  variant="no-data"
/>
`;

exports[`ApplicationStatusOverlay should render status view without any data 1`] = `
<ApplicationStatusOverlay
  buttonAttrs={[]}
/>
`;
